--- a/bb-assessment/index.html
+++ b/bb-assessment/index.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="css/normalize.min..css"/>
         <link rel="stylesheet" href="css/main.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Allura&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Allura&display=swap" rel="stylesheet">
     </head> 
     <body>
         <div class="page-wrap">
