--- a/bb-assessment/index.html
+++ b/bb-assessment/index.html
@@ -48,7 +48,7 @@
                     <div class="site-motto">Children Our greatest earthly blessing.</div>
 
                     <div class="site-logo">
-                        <img src="images/bb-logo.png" alt="Beautiful Beginnings: Celebrating baby and child">
+                        <img src="images/bb-logo.png" title="logo" class="image-logo"alt="Beautiful Beginnings: Celebrating baby and child">
                     </div>
 
                     <div class="site-search">
